  involved redirects. Without this, infinite recursion within the parser is
  possible.
* (bug 18601) generator=backlinks returns invalid continue parameter
* (bug 18597) Internal error with empty generator= parameter
* (bug 18617) Add xml:space="preserve" attribute to relevant tags in XML output
* (bug 17611) Provide a sensible error message on install when the SQLite data
  directory is wrong.

=== Languages updated in 1.15 ===

MediaWiki supports over 300 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of MediaZilla reports.

* Austrian German (de-at) (new)
* Swiss Standard German (de-ch) (new)
* Simplified Gan Chinese (gan-hans) (new)
* Traditional Gan Chinese (gan-hant) (new)
* Literary Chinese (lzh) (new)
* Uyghur (Latin script) (ug-latn) (renamed from 'ug')
* Veps (vep) (new)
* Võro (vro) (renamed from fiu-vro)
* (bug 17151) Add magic word alias for #redirect for Vietnamese
* (bug 17288) Messages improved for default language (English)
* (bug 12937) Update native name for Afar
* (bug 16909) 'histlegend' now reuses messages instead of copying them
* (bug 17832) action=delete returns 'unknownerror' instead of 'permissiondenied' when
  the user is blocked
* Traditional/Simplified Gan Chinese conversion support

== MediaWiki 1.14 ==

=== Configuration changes in 1.14 ===

* $wgExemptFromUserRobotsControl is an array of namespaces to be exempt from
  the effect of the new __INDEX__/__NOINDEX__ magic words.  (Default: null, ex-
  empt all content namespaces.)
* $wgForwardSearchUrl has been removed entirely. Documented setting since 1.4
  has been $wgSearchForwardUrl.
* (bug 15080) $wgOverrideSiteFeed has been added. Setting either
  $wgSiteFeed['rss'] or 'atom' to a URL will override the default Recent
  Changes feed that appears on all pages.
* $wgSQLiteDataDirMode has been introduced as the default directory mode for