@@ -53,6 +53,7 @@ following names for their contribution to the product.
 * Rotem Liss
 * Ryan Lane
 * Ryan Schmidt
+* Sam Reed
 * Shinjiman
 * Siebrand Mazeland
 * SQL
@@ -107,7 +108,6 @@ following names for their contribution to the product.
 * Robert Treat
 * RockMFR
 * Roi Avinoam
-* Sam Reed
 * ST47
 * Scott Colcord
 * Simon Walker
